force-app/main/default/objects/Prototype_Screen_Configuration__c/Prototype_Screen_Configuration__c.object-meta.xml
<CustomObject>
    <label>Prototype Screen Configuration</label>
    <nameField>
        <label>Prototype Screen Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prototype Screen Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>