force-app/main/default/objects/Prototype_Screen_Configuration__c/fields/File_VersionId__c.field-meta.xml
<CustomField>
    <fullName>File_VersionId__c</fullName>
    <label>File VersionId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>