force-app/main/default/objects/Prototype_Screen_Configuration__c/fields/Prototype_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Prototype_Configuration__c</fullName>
    <label>Prototype Configuration</label>
    <referenceTo>PrototypeConfiguration__c</referenceTo>
    <relationshipLabel>Prototype Screen Configurations</relationshipLabel>
    <relationshipName>Prototype_Screen_Configurations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>