force-app/main/default/objects/Prototype_Screen_Configuration__c/fields/sheight__c.field-meta.xml
<CustomField>
    <fullName>sheight__c</fullName>
    <label>Screen Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>