force-app/main/default/objects/Prototype_Screen_Configuration__c/fields/startFlag__c.field-meta.xml
<CustomField>
    <fullName>startFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>startFlag</label>
    <type>Checkbox</type>
</CustomField>